# pyMCS

./: README.md  pyproject.toml
pymcs/: cluster_analysis.py
